@@ -68,4 +68,4 @@ requires:
   Time::HiRes: 0
   YAML::Syck: 1.04
   perl: 5.6.1
-version: 0.3.14
+version: 0.3.15
