@@ -3,6 +3,7 @@ Change Log for OpenResty
 0.3.15 Jul 15 2008
 * used the prompt function rather than <STDIN> in Makefile.PL as per Sanko Robinson's suggestion.
 * various improvements of OpenResty::Spec::GettingStarted_cn.
+* updated the document OpenResty::Spec::REST_cn.
 
 0.3.14 Jul 14 2008
 * fixed a bug regarding set_user("_global") which breaks creating the first OpenResty account on a fresh Pg.
